add module jdeps